--- a/projects.html
+++ b/projects.html
@@ -29,9 +29,7 @@
       font-weight: 500;
     }
 
-    nav a:hover {
-      opacity: 0.7;
-    }
+    nav a:hover { opacity: 0.7; }
 
     /* HEADER */
     header {
@@ -61,7 +59,6 @@
 
     .tabs a {
       color: #cfcfcf;
-      font-size: 1rem;
       text-decoration: none;
       padding-bottom: 6px;
     }
@@ -69,10 +66,6 @@
     .tabs a.active {
       color: white;
       border-bottom: 2px solid white;
-    }
-
-    .tabs a:hover {
-      opacity: 0.7;
     }
 
     /* MAIN */
@@ -105,13 +98,8 @@
       margin-bottom: 20px;
     }
 
-    .video-row {
-      display: flex;
-      justify-content: center;
-      gap: 20px;
-      flex-wrap: wrap;
-    }
-
+    /* VIDEO LAYOUTS */
+    .video-row,
     .video-rows {
       display: flex;
       justify-content: center;
@@ -119,17 +107,21 @@
       flex-wrap: wrap;
     }
 
-    .video-rows video {
-      width: 100%;
-      max-width: 210px;
+    /* Horizontal videos */
+    .video-row iframe {
+      width: 380px;
+      aspect-ratio: 16 / 9;
       border-radius: 12px;
+      border: none;
       background: black;
     }
 
-    .video-row video {
-      width: 100%;
-      max-width: 380px;
+    /* Vertical videos */
+    .video-rows iframe {
+      width: 210px;
+      aspect-ratio: 9 / 16;
       border-radius: 12px;
+      border: none;
       background: black;
     }
 
@@ -143,110 +135,107 @@
 
 <body>
 
-  <!-- NAV -->
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="projects.html">Projects</a>
-  </nav>
+<!-- NAV -->
+<nav>
+  <a href="index.html">Home</a>
+  <a href="projects.html">Projects</a>
+</nav>
 
-  <!-- HEADER -->
-  <header>
-    <h1>Videos</h1>
-    <p>
-      A curated selection of drone video and photography work focused on
-      clarity, composition, and real-world application.
-    </p>
+<!-- HEADER -->
+<header>
+  <h1>Videos</h1>
+  <p>
+    A curated selection of drone video work focused on
+    clarity, composition, and real-world application.
+  </p>
 
-    <div class="tabs">
-      <a href="projects.html" class="active">Videos</a>
-      <a href="photos.html">Photos</a>
+  <div class="tabs">
+    <a href="projects.html" class="active">Videos</a>
+    <a href="photos.html">Photos</a>
+  </div>
+</header>
+
+<!-- MAIN -->
+<main>
+
+  <!-- ORBIT -->
+  <div class="project">
+    <h3>Orbit Shot</h3>
+    <p>Smooth orbit movement documenting the surrounding environment.</p>
+    <span>Video · Drone</span>
+
+    <div class="video-row">
+      <iframe src="https://player.vimeo.com/video/1158842406?title=0&byline=0&portrait=0&controls=1&dnt=1"
+        allow="fullscreen; picture-in-picture" allowfullscreen></iframe>
+
+      <iframe src="https://player.vimeo.com/video/1158842598?title=0&byline=0&portrait=0&controls=1&dnt=1"
+        allow="fullscreen; picture-in-picture" allowfullscreen></iframe>
     </div>
-  </header>
+  </div>
 
-  <!-- MAIN -->
-  <main>
+  <!-- HYPERLAPSE -->
+  <div class="project">
+    <h3>City Hyperlapse</h3>
+    <p>Timelapse-style sequence highlighting urban traffic patterns.</p>
+    <span>Video · Drone</span>
 
-    <div class="project">
-      <h3>Orbit Shot</h3>
-      <p>
-        Smooth orbit movement documenting the surrounding environment and spatial context of the structure.
-      </p>
-      <span>Video · Drone</span>
-      <div class="video-row">
-        <video controls>
-          <source src="videos/orbit-shot-1.mp4" type="video/mp4">
-        </video>
-        <video controls>
-          <source src="videos/orbit-shot-2.mp4" type="video/mp4">
-        </video>
-      </div>
+    <div class="video-rows">
+      <iframe src="https://player.vimeo.com/video/1158841819?title=0&byline=0&portrait=0&controls=1&dnt=1"
+        allow="fullscreen; picture-in-picture" allowfullscreen></iframe>
+
+      <iframe src="https://player.vimeo.com/video/1158842134?title=0&byline=0&portrait=0&controls=1&dnt=1"
+        allow="fullscreen; picture-in-picture" allowfullscreen></iframe>
     </div>
+  </div>
 
-    <div class="project">
-      <h3>City Hyperlapse</h3>
-      <p>
-        Timelapse-style sequence highlighting urban traffic patterns and scale.
-      </p>
-      <span>Video · Drone</span>
-      <div class="video-rows">
-        <video controls>
-          <source src="videos/hyperlapse-1.mp4" type="video/mp4">
-        </video>
-        <video controls>
-          <source src="videos/hyperlapse-2.mp4" type="video/mp4">
-        </video>
-      </div>
+  <!-- TRACKING -->
+  <div class="project">
+    <h3>Tracking Shot</h3>
+    <p>Tracking shot showing off the natural landscape.</p>
+    <span>Video · Drone</span>
+
+    <div class="video-row">
+      <iframe src="https://player.vimeo.com/video/1158843476?title=0&byline=0&portrait=0&controls=1&dnt=1"
+        allow="fullscreen; picture-in-picture" allowfullscreen></iframe>
     </div>
+  </div>
 
-    <div class="project">
-      <h3>Tracking Shot</h3>
-      <p>Tracking shot showing off the natural landscape.</p>
-      <span>Video · Drone</span>
-      <div class="video-row">
-        <video controls>
-          <source src="videos/tracking-1.mp4" type="video/mp4">
-        </video>
-      </div>
+  <!-- TOP DOWN -->
+  <div class="project">
+    <h3>Top-Down Shot</h3>
+    <p>Vertical aerial emphasizing symmetry and geometry.</p>
+    <span>Video · Drone</span>
+
+    <div class="video-row">
+      <iframe src="https://player.vimeo.com/video/1158843178?title=0&byline=0&portrait=0&controls=1&dnt=1"
+        allow="fullscreen; picture-in-picture" allowfullscreen></iframe>
+
+      <iframe src="https://player.vimeo.com/video/1158843364?title=0&byline=0&portrait=0&controls=1&dnt=1"
+        allow="fullscreen; picture-in-picture" allowfullscreen></iframe>
     </div>
+  </div>
 
-    <div class="project">
-      <h3>Top-Down Shot</h3>
-      <p>
-        Vertical aerial emphasizing symmetry, geometry, and urban form.
-      </p>
-      <span>Video · Drone</span>
-      <div class="video-row">
-        <video controls>
-          <source src="videos/topdown-1.mp4" type="video/mp4">
-        </video>
-        <video controls>
-          <source src="videos/topdown-2.mp4" type="video/mp4">
-        </video>
-      </div>
+  <!-- REVEAL -->
+  <div class="project">
+    <h3>Reveal Shot</h3>
+    <p>Reveal shot emphasizing depth and architectural scale.</p>
+    <span>Video · Drone</span>
+
+    <div class="video-row">
+      <iframe src="https://player.vimeo.com/video/1158842846?title=0&byline=0&portrait=0&controls=1&dnt=1"
+        allow="fullscreen; picture-in-picture" allowfullscreen></iframe>
+
+      <iframe src="https://player.vimeo.com/video/1158843109?title=0&byline=0&portrait=0&controls=1&dnt=1"
+        allow="fullscreen; picture-in-picture" allowfullscreen></iframe>
     </div>
+  </div>
 
-    <div class="project">
-      <h3>Reveal Shot</h3>
-      <p>
-        Reveal shot emphasizing the depth and scale of the architecture and nearby environment.
-      </p>
-      <span>Video · Drone</span>
-      <div class="video-row">
-        <video controls>
-          <source src="videos/reveal-1.mp4" type="video/mp4">
-        </video>
-        <video controls>
-          <source src="videos/reveal-2.mp4" type="video/mp4">
-        </video>
-      </div>
-    </div>
+</main>
 
-  </main>
-
-  <!-- FOOTER -->
-  <footer>
-    © 2026 Bryce Zhao
-  </footer>
+<!-- FOOTER -->
+<footer>
+  © 2026 Bryce Zhao
+</footer>
 
 </body>
 </html>
