--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ nav a:hover {
 /* HEADER / BANNER */
 header {
   position: relative;
-  background-image: url("banner.JPG");
+  background-image: url("photos/banner.JPG");
   background-size: cover;
   background-position: center;
   padding: 160px 30px 120px;
